force-app/main/default/objects/API_Error__c/fields/VersaPay_Product_Payment__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Product_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VersaPay Product Payment</label>
    <referenceTo>VersaPay_Product_Payment__c</referenceTo>
    <relationshipLabel>API Errors</relationshipLabel>
    <relationshipName>API_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>