force-app/main/default/objects/API_Error__c/listViews/All_Today.listView-meta.xml
<ListView>
    <fullName>All_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Action__c</columns>
    <columns>Application__c</columns>
    <columns>End_Point__c</columns>
    <columns>Error__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today</label>
</ListView>